--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-datepicker": "^4.11.0",
     "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
+    "reactjs-popup": "^2.0.6",
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^8.0.5",
